--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/ADobrzanski/diploma-work-bsc-2019#readme",
   "dependencies": {
+    "apollo-server": "^2.9.15",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
