--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "diploma-work-bsc-2019",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "nodemon -L"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,13 @@
   "homepage": "https://github.com/ADobrzanski/diploma-work-bsc-2019#readme",
   "dependencies": {
     "apollo-server": "^2.9.15",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
+    "graphql-iso-date": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "prisma-binding": "^2.3.16",
     "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
