--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - '4000:4000'
     environment:
       JWT_SECRET: ${JWT_SECRET}
-      DB_URI: postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}
+      DB_URI: postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
   postgres:
     container_name: postgres
     image: postgres:12.1-alpine
