--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "apollo-server": "^2.9.15",
     "apollo-server-express": "^2.9.15",
+    "aws-sdk": "^2.608.0",
+    "aws-signature-v4": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -28,8 +30,6 @@
     "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.17.1",
-    "prisma-binding": "^2.3.16",
-    "prisma-client-lib": "^1.34.10",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
