--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
+    "graphql-resolve-batch": "^1.0.2",
     "join-monster": "^2.1.1",
     "join-monster-graphql-tools-adapter": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
